--- a/package.json
+++ b/package.json
@@ -17,49 +17,49 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-navigation/bottom-tabs": "^7.3.13",
-    "@react-navigation/native": "^7.1.9",
-    "@react-navigation/stack": "^7.3.2",
-    "@reduxjs/toolkit": "^2.8.2",
-    "axios": "^1.9.0",
-    "expo": "^53.0.9",
-    "expo-splash-screen": "^0.30.8",
-    "expo-updates": "^0.28.13",
-    "nativewind": "^4.1.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.56.4",
-    "react-native": "^0.72.6",
-    "react-native-config": "^1.5.5",
+    "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
+    "expo": "~49.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-updates": "~0.18.17",
+    "nativewind": "^4.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-native": "0.72.6",
+    "react-native-config": "^1.5.1",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^9.2.0",
-    "tailwindcss": "^3.4.17",
-    "zod": "^3.25.7"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.0.4",
+    "tailwindcss": "^3.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "babel-preset-expo": "~8.3.0",
-    "eslint": "^8.56.0",
-    "eslint-config-expo": "^9.2.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-react-native": "^5.0.0",
-    "husky": "^9.1.7",
-    "jest-expo": "~41.0.0",
-    "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5.0.4"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "~0.72.2",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "babel-preset-expo": "^9.5.0",
+    "eslint": "^8.55.0",
+    "eslint-config-expo": "^49.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-native": "^4.1.0",
+    "husky": "^8.0.3",
+    "jest-expo": "~49.0.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.0",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "preset": "react-native"
